--- a/spk/transmission/Makefile
+++ b/spk/transmission/Makefile
@@ -1,6 +1,6 @@
 SPK_NAME = transmission
-SPK_VERS = 4.0.6
-SPK_REV = 27
+SPK_VERS = 4.1.0
+SPK_REV = 28
 SPK_ICON = src/transmission.png
 
 DEPENDS = cross/transmission
@@ -9,13 +9,15 @@ REQUIRED_MIN_DSM = 7.0
 UNSUPPORTED_ARCHS = comcerto2k
 REQUIRED_MIN_SRM = 1.3
 
+BETA = 1
+
 MAINTAINER = SynoCommunity
 DESCRIPTION = Transmission is an easy and fast BitTorrent client. You can control it remotely with its web interface or dedicated applications.
 DESCRIPTION_FRE = Transmission est un client BitTorrent simple et rapide. Vous pouvez le contrôler à distance grâce à son interface web ou des applications dédiées.
 DESCRIPTION_SPN = Transmission es un cliente BitTorrent simple y rápido. Puedes controlarlo remotamente mediante su interfaz web o alguna aplicación dedicada.
 STARTABLE = yes
 DISPLAY_NAME = Transmission
-CHANGELOG = "Update Transmission to v4.0.6."
+CHANGELOG = "Transmission 4.1.0-beta.1. This is the first beta for 4.1.0"
 
 HOMEPAGE = https://transmissionbt.com
 LICENSE  = GPLv2/GPLv3
