--- a/cross/transmission/Makefile
+++ b/cross/transmission/Makefile
@@ -1,6 +1,6 @@
 PKG_NAME = transmission
-PKG_VERS = 4.1.0-beta.1
-PKG_REVISION = rc3a8106077
+PKG_VERS = 4.1.0-beta.2
+PKG_REVISION = rac5c9e082d
 PKG_EXT = tar.xz
 PKG_DIST_NAME = $(PKG_NAME)-$(PKG_VERS)+$(PKG_REVISION).$(PKG_EXT)
 PKG_DIST_SITE = https://github.com/transmission/transmission/releases/download/$(PKG_VERS)
