--- a/cross/transmission/Makefile
+++ b/cross/transmission/Makefile
@@ -17,7 +17,8 @@ REQUIRED_MIN_DSM = 7.0
 UNSUPPORTED_ARCHS = comcerto2k
 REQUIRED_MIN_SRM = 1.3
 
-CMAKE_ARGS = -DCMAKE_BUILD_TYPE=RelWithDebInfo ..
+CMAKE_ARGS = -DCMAKE_BUILD_TYPE=RelWithDebInfo
+CMAKE_ARGS += -DBUILD_SHARED_LIBS=OFF
 CMAKE_ARGS += -DENABLE_TESTS=OFF
 
 include ../../mk/spksrc.cross-cmake.mk
