llvm-140: Removal of additional build warnings

--- a/cross/llvm-140/Makefile
+++ b/cross/llvm-140/Makefile
@@ -70,7 +70,8 @@ CMAKE_ARGS += -DLLVM_ENABLE_DUMP=ON
 # Required to copy libunwind/include/mach-o/compact_unwind_encoding.h
 
 # Remove build warnings
-ADDITIONAL_CXXFLAGS  = -Wno-cast-function-type
+ADDITIONAL_CXXFLAGS  = -Wno-attributes
+ADDITIONAL_CXXFLAGS += -Wno-cast-function-type
 ADDITIONAL_CXXFLAGS += -Wno-enum-compare
 ADDITIONAL_CXXFLAGS += -Wno-pedantic
 ADDITIONAL_CXXFLAGS += -Wno-switch
