--- a/cross/libass/Makefile
+++ b/cross/libass/Makefile
@@ -1,11 +1,11 @@
 PKG_NAME = libass
-PKG_VERS = 0.17.2
+PKG_VERS = 0.17.4
 PKG_EXT = tar.xz
 PKG_DIST_NAME = $(PKG_NAME)-$(PKG_VERS).$(PKG_EXT)
 PKG_DIST_SITE = https://github.com/libass/libass/releases/download/$(PKG_VERS)
 PKG_DIR = $(PKG_NAME)-$(PKG_VERS)
 
-DEPENDS = cross/freetype cross/fribidi cross/fontconfig cross/harfbuzz
+DEPENDS = cross/freetype cross/fribidi cross/fontconfig cross/harfbuzz cross/libunibreak
 
 # harfbuzz
 UNSUPPORTED_ARCHS = $(ARMv5_ARCHS) $(OLD_PPC_ARCHS)
@@ -14,8 +14,7 @@ HOMEPAGE = https://github.com/libass/libass
 COMMENT  = libass is a portable subtitle renderer for the ASS/SSA (Advanced Substation Alpha/Substation Alpha) subtitle format.
 LICENSE  = ICS
 
-GNU_CONFIGURE = 1
-CONFIGURE_ARGS = --disable-static
-ADDITIONAL_CFLAGS = -O
+CONFIGURE_ARGS += -Dfontconfig=enabled
+CONFIGURE_ARGS += -Dlibunibreak=enabled
 
-include ../../mk/spksrc.cross-cc.mk
+include ../../mk/spksrc.cross-meson.mk
