--- a/spk/chromaprint/Makefile
+++ b/spk/chromaprint/Makefile
@@ -1,6 +1,6 @@
 SPK_NAME = chromaprint
 SPK_VERS = 1.6.0
-SPK_REV = 24
+SPK_REV = 25
 SPK_ICON = src/chromaprint.png
 
 FFMPEG_PACKAGE = ffmpeg7
@@ -15,7 +15,7 @@ STARTABLE = no
 MAINTAINER = SynoCommunity
 DESCRIPTION = Chromaprint is the core component of the AcoustID project. It\'s a client-side library that implements a custom algorithm for extracting fingerprints from any audio source.
 DISPLAY_NAME = Chromaprint
-CHANGELOG = "1. Version 1.6.0<br/>2. Update to FFMPEG 7.0.3"
+CHANGELOG = "1. Update to FFMPEG 7.1.3"
 
 HOMEPAGE   = https://acoustid.org/chromaprint
 LICENSE    = LGPL2.1+
