libunibreak: Fix cross-compile - avoid autogen from invoking configure

--- a/cross/libunibreak/Makefile
+++ b/cross/libunibreak/Makefile
@@ -22,4 +22,4 @@ include ../../mk/spksrc.cross-cc.mk
 
 .PHONY: libuniberak_pre_configure
 libuniberak_pre_configure:
-	@$(RUN) ./autogen.sh
+	@$(RUN) NOCONFIGURE=1 ./autogen.sh
