--- a/spk/tvheadend/Makefile
+++ b/spk/tvheadend/Makefile
@@ -35,10 +35,9 @@ SERVICE_PORT_TITLE = Tvheadend (HTTP)
 ADMIN_PORT = ${SERVICE_PORT}
 
 # PPC archs except qoriq are not supported
-# https://tvheadend.org/issues/5060
-UNSUPPORTED_ARCHS = $(OLD_PPC_ARCHS)
-# ffmpeg7 requires c11 support
-UNSUPPORTED_ARCHS += $(ARMv5_ARCHS)
+#    https://tvheadend.org/issues/5060
+# ffmpeg-7 no longer support 88f6281 (armv5) and ffmpeg-7.1 hi3535 (armv7l)
+UNSUPPORTED_ARCHS = $(ARMv5_ARCHS) $(ARMv7L_ARCHS) $(OLD_PPC_ARCHS)
 
 DEPENDS = cross/tvheadend
 DEPENDS += cross/dtv-scan-tables
