llvm-14.0-libclc: Use updated llvm-14.0 native profile

--- a/native/llvm-14.0-libclc/Makefile
+++ b/native/llvm-14.0-libclc/Makefile
@@ -15,7 +15,7 @@ POST_INSTALL_TARGET = libclc_create_pkgconfig
 # -----------------------------------------------------------------------------
 # Dependencies
 # -----------------------------------------------------------------------------
-DEPENDS = native/llvm-14.0-build
+DEPENDS = native/llvm-14.0
 
 # -----------------------------------------------------------------------------
 # Directories
