llvm-9.0: Review compiler-rt condition for comcerto2k

--- a/cross/llvm-9.0/Makefile
+++ b/cross/llvm-9.0/Makefile
@@ -108,9 +108,9 @@ endif
 # -----------------------------------------------------------------------------
 
 # Compiler run-time options:
-#   - Applies to all DSM >= 7
+#   - Applies to all DSM >= 7 with exception of comcerto2k (gcc-4.9)
 #   - Applies to all DSM >= 6 with exception of ARMv7
-ifneq ($(or $(call version_ge,$(TCVERSION),7),$(filter-out $(ARMv7_ARCHS) $(ARMv7L_ARCHS),$(ARCH))),)
+ifneq ($(or $(call version_gt,$(TC_GCC),5),$(filter-out $(ARMv7_ARCHS) $(ARMv7L_ARCHS),$(ARCH))),)
   CMAKE_ARGS += -DLLVM_ENABLE_PROJECTS='clang;compiler-rt;lld'
   CMAKE_ARGS += -DCOMPILER_RT_BUILD_BUILTINS=ON
   CMAKE_ARGS += -DCOMPILER_RT_BUILD_PROFILE=OFF
