--- a/spk/tvheadend/Makefile
+++ b/spk/tvheadend/Makefile
@@ -1,7 +1,7 @@
 SPK_NAME = tvheadend
 SPK_SHORT_VERS = 4.3
-SPK_GIT_HASH = 646fcdb0
-SPK_GIT_DATE = 20260101
+SPK_GIT_HASH = 58861264
+SPK_GIT_DATE = 20260108
 SPK_VERS = $(SPK_SHORT_VERS).$(SPK_GIT_DATE)
 TVH_VERS = $(SPK_SHORT_VERS)~$(SPK_GIT_HASH)
 SPK_REV = 46
@@ -17,7 +17,7 @@ DESCRIPTION = Tvheadend is a TV streaming server and recorder for Linux, FreeBSD
 DESCRIPTION_FRE = Tvheadend est un serveur de streaming et enregistreur TV pour Linux, FreeBSD et Android prenant en charge DVB-S, DVB-S2, DVB-C, DVB-T, ATSC, ISDB-T, IPTV, SAT IP et HDHomeRun comme sources d\'entrée. Tvheadend offre le streaming HTTP, HTSP et SAT IP.
 DISPLAY_NAME = Tvheadend
 STARTABLE = yes
-CHANGELOG = "1. Update to latest git version fa8011b4 as of December 22nd 2025<br/>2. Update to FFMPEG 7.1.3"
+CHANGELOG = "1. Update to latest git version 58861264 as of January 8th 2026<br/>2. Update to FFMPEG 7.1.3"
 HOMEPAGE = https://tvheadend.org/
 LICENSE = GPL v3
 
