--- a/cross/transmission/Makefile
+++ b/cross/transmission/Makefile
@@ -1,6 +1,6 @@
 PKG_NAME = transmission
-PKG_VERS = 4.1.0-beta.4
-PKG_REVISION = rc92b42de9c
+PKG_VERS = 4.1.0-beta.5
+PKG_REVISION = r11d3fc6f5a
 PKG_EXT = tar.xz
 PKG_DIST_NAME = $(PKG_NAME)-$(PKG_VERS)+$(PKG_REVISION).$(PKG_EXT)
 PKG_DIST_SITE = https://github.com/transmission/transmission/releases/download/$(PKG_VERS)
