fix spk Makefile

--- a/spk/restic/Makefile
+++ b/spk/restic/Makefile
@@ -3,7 +3,7 @@ SPK_VERS = 0.18.1
 SPK_REV = 1
 SPK_ICON = src/logo.png
 
-DEPENDS = cross/$(SPK_NAME)
+DEPENDS = cross/restic
 
 MAINTAINER = fgma
 DESCRIPTION = Restic is a fast and secure backup program.
