vaultwarden: Disable web UI shortcut and add HTTPS warning
Vaultwarden requires HTTPS for the Web Crypto API. Since the package
cannot automatically configure a reverse proxy, the web UI shortcut
is disabled via NO_SERVICE_SHORTCUT to prevent users from seeing an
error page. The SERVICE_PORT is retained for firewall configuration.

Users must configure a reverse proxy with SSL before accessing the
web interface. The install wizard now includes a prominent warning
and link to the wiki for setup instructions.

--- a/spk/vaultwarden/Makefile
+++ b/spk/vaultwarden/Makefile
@@ -19,8 +19,8 @@ STARTABLE = yes
 SERVICE_USER = auto
 SERVICE_SETUP = src/service-setup.sh
 SERVICE_PORT = 8180
-SERVICE_PORT_TITLE = vaultwarden web
-ADMIN_PORT = $(SERVICE_PORT)
+SERVICE_PORT_TITLE = Vaultwarden
+NO_SERVICE_SHORTCUT = true
 
 WIZARDS_DIR = src/wizard/
 
