rustdesk-server: use environment file for configuration
- Replace hbbs.conf with hbbs.env (shell environment file format)
- Source env file before starting services to export variables
- Fix ALWAYS_USE_RELAY configuration (env var format matches what code expects)
- Update firewall section IDs for clarity

--- a/spk/rustdesk-server/Makefile
+++ b/spk/rustdesk-server/Makefile
@@ -32,4 +32,13 @@ FWPORTS = src/rustdesk-server.sc
 # Minimum DSM version
 SPK_MIN_DSM = 6.0
 
+# Install config file template
+POST_STRIP_TARGET = rustdesk_extra_install
+
 include ../../mk/spksrc.spk.mk
+
+.PHONY: rustdesk_extra_install
+rustdesk_extra_install:
+	@$(MSG) Install config file template
+	@install -d -m 755 $(STAGING_DIR)/share
+	@install -m 644 src/hbbs.env $(STAGING_DIR)/share/
