seerr: refine build recipe

--- a/cross/seerr/Makefile
+++ b/cross/seerr/Makefile
@@ -92,6 +92,7 @@ seerr_install:
 	# ------------------------------------------------------------
 	$(RUN) rm -rf \
 		.next/cache \
+		.next/trace \
 		charts \
 		docs \
 		gen-docs \
